konst/tests/misc_tests/collect_const_ui_tests/collect_const_break_err.rs
const _: [usize; 9] = {
    konst::iter::collect_const!{usize => 0usize..10,map(|_| break)}
};
